# agora

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
agora/: __init__.py  cli.py
agora/graph/: __init__.py  schema.py  store.py
agora/report/: __init__.py  generator.py
agora/simulation/: __init__.py  agent.py  engine.py  prompts.py
examples/: run_example.py  seed_data.json
examples/toastmasters/: run_simulation.py
examples/toastmasters/results/: sample_output.txt  sample_output_v2.txt
tests/: test_agent.py  test_graph.py
